bug: First and last name overlap on <320 px width screens

--- a/app/Gallery.css
+++ b/app/Gallery.css
@@ -25,8 +25,7 @@
   width: 60px;
   height: 60px;
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 10px auto;
   border-radius: 100%;
   box-shadow: 0 13px 26px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .16);
   background-size: cover;
@@ -48,7 +47,6 @@
   padding: 0.5em;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  line-height: 0;
 }
 .rwp-description {
   color: #080911;
